# bcbi

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml
docs/: pubmed_bulk_export_test.md
src/bcbi/: __init__.py
src/bcbi/pubmed/: __init__.py  _decode.py  _util.py  api.py  client.py
tests/pubmed/: test_pubmed_bulk_export.py
